--- a/transit/manifest.json
+++ b/transit/manifest.json
@@ -8,6 +8,12 @@
   "icons": {
     "48": "icon48.png"
   },
+
+  "browser_action": {
+    "default_icon": "icon48.png",
+    "default_popup": "popup.html"
+  },
+
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -15,6 +21,7 @@
       "js": ["js/transit.js"]
     }
   ],
+
   "permissions": [
     "tabs"
   ]
