--- a/transit/manifest.json
+++ b/transit/manifest.json
@@ -9,6 +9,11 @@
     "48": "icon48.png"
   },
 
+  "background": {
+    "scripts": ["js/event.js"],
+    "persistent": false
+  },
+
   "browser_action": {
     "default_icon": "icon48.png",
     "default_popup": "popup.html"
@@ -23,6 +28,7 @@
   ],
 
   "permissions": [
-    "tabs"
+    "tabs", "http://fanyi.youdao.com/openapi.do"
   ]
 }
+
