实现简单德服务器词条推送

--- a/transit/manifest.json
+++ b/transit/manifest.json
@@ -28,7 +28,7 @@
   ],
 
   "permissions": [
-    "tabs", "http://fanyi.youdao.com/openapi.do"
+    "tabs", "http://fanyi.youdao.com/openapi.do", "http://trit.herokuapp.com/api/items"
   ]
 }
 
