--- a/transit/manifest.json
+++ b/transit/manifest.json
@@ -11,7 +11,7 @@
 
   "background": {
     "scripts": ["js/sugar.min.js", "js/helpers.js", "js/event.js"],
-    "persistent": false
+    "persistent": true
   },
 
   "browser_action": {
