--- a/transit/manifest.json
+++ b/transit/manifest.json
@@ -23,7 +23,7 @@
     {
       "matches": ["<all_urls>"],
       "css": ["css/transit.css"],
-      "js": ["js/sugar.min.js", "js/helpers.js", "js/transit.js"]
+      "js": ["js/jquery-2.0.3.min.js", "js/helpers.js", "js/transit.js"]
     }
   ],
 
@@ -31,4 +31,3 @@
     "tabs", "http://fanyi.youdao.com/openapi.do", "http://trit.herokuapp.com/api/items"
   ]
 }
-
