使用 storage 存储设置项
实现了初始化默认值的功能，及部分设置项变更检测的功能

--- a/transit/manifest.json
+++ b/transit/manifest.json
@@ -11,7 +11,7 @@
   },
 
   "background": {
-    "scripts": ["js/crxkit.js", "js/helpers.js", "js/event.js"],
+    "scripts": ["js/sugar.min.js", "js/helpers.js", "js/event.js"],
     "persistent": true
   },
 
@@ -29,6 +29,6 @@
   ],
 
   "permissions": [
-    "tabs", "http://fanyi.youdao.com/openapi.do", "http://trit.herokuapp.com/api/items"
+    "tabs", "storage", "http://fanyi.youdao.com/openapi.do", "http://trit.herokuapp.com/api/items"
   ]
 }
