使用 storage 来管理扩展配置项
使用 storgae 使配置项实时在各扩展页面同步，简化了配置的代码，使代码运行的更高效。
同时修正了关闭了页面划词后，进行划词页面仍然显示`翻译中。。。`的问题

优化了弹出页面中的配置项更新和读取方式，以后要加新的配置项，实现起来也非常方便。

--- a/transit/manifest.json
+++ b/transit/manifest.json
@@ -24,7 +24,7 @@
     {
       "matches": ["<all_urls>"],
       "css": ["css/transit.css"],
-      "js": ["js/jquery-2.0.3.min.js", "js/helpers.js", "js/transit.js"]
+      "js": ["js/jquery-2.0.3.min.js", "js/sugar.min.js", "js/helpers.js", "js/transit.js"]
     }
   ],
 
