屏蔽掉推送功能
- 屏蔽掉推送的功能，以准备发布1.0版本
- 在链接划词的选项上添加说明

--- a/transit/manifest.json
+++ b/transit/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "TransIt",
-  "description": "划词翻译",
+  "description": "简单的划词翻译扩展",
   "version": "1.0",
   
   "icons": {
