--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "TransIt",
   "description": "简单的划词翻译扩展",
-  "version": "1.1",
+  "version": "1.2",
   
   "icons": {
     "48": "icon48.png",
@@ -23,8 +23,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "css": ["css/transit.css"],
-      "js": ["js/jquery-2.0.3.min.js", "js/sugar.min.js", "js/helpers.js", "js/transit.js"]
+      "css": ["css/contentstyle.css"],
+      "js": ["js/jquery-2.0.3.min.js", "js/sugar.min.js", "js/helpers.js", "js/contentscript.js"]
     }
   ],
 
