--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -33,7 +33,7 @@
     {
       "matches": ["<all_urls>"],
       "css": ["css/notify.user.css"],
-      "js": [ "js/notify.user.js" ],
+      "js": [ "js/notify.user.js" ]
     }
   ],
 
