支持了 iframe 中页面的查询
将页面划词和显示结果的逻辑分离，并分到不同文件中，其中

- 划词的逻辑将被注入到所有页面中（包括 iframe）
- 显示翻译结果的逻辑仅被注入到根文档中（top)

两者之前使用 eventPage 作为媒介进行信息交互，我本打算是直接 contentscript 到
contentscript 交互，但在 contentscript 中不能使用 chrome.tabs 所以没有办法
从页面直接向页面发送信息（因为 iframe 的情况，两个脚本之前可以没有办法互相访问）

同时，我提取出了一些公共的方法，比如

- registerMessageDispatcher 用于分发事件
- talkToPage 用于从扩展向当前页面发送信息
- log 包装的日志方法，打日志会带上前缀 [transit]

这些方法可以在 js/helpers.js 中找到。

本 feature 在 QQ邮箱 中测试通过。

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -25,6 +25,7 @@
       "matches": ["<all_urls>"],
       "js": [
         "js/jquery-2.0.3.min.js",
+        "js/sugar.min.js",
         "js/helpers.js",
         "js/action.user.js"
       ],
