--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,7 +11,12 @@
   },
 
   "background": {
-    "scripts": ["js/sugar.min.js", "js/application.js", "js/event.js"],
+    "scripts": [
+      "js/jquery-2.0.3.min.js",
+      "js/sugar.min.js",
+      "js/application.js",
+      "js/event.js"
+    ],
     "persistent": true
   },
 
