解决 jquery source map 问题

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -41,6 +41,10 @@
     }
   ],
 
+  "web_accessible_resources": [
+   "/js/jquery-2.1.0.min.map"
+  ],
+
   "permissions": [
     "tabs",
     "storage",
