--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "TransIt",
   "description": "让划词翻译更简单",
-  "version": "1.2.3",
+  "version": "1.3",
   
   "icons": {
     "48": "icon48.png",
@@ -19,6 +19,8 @@
     "persistent": true
   },
 
+  "options_page": "options.html",
+  
   "browser_action": {
     "default_icon": "icon48.png",
     "default_popup": "popup.html"
