--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,6 +14,7 @@
     "scripts": [
       "js/jquery-2.1.0.min.js",
       "js/translators/youdao_translator.js",
+      "js/translators/baidu_translator.js",
       "js/application.js",
       "js/event.js"
     ],
