--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-minify-css": "^0.4.4",
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.1.0",
+    "gulp-watch": "^4.1.0",
     "gulp-zip": "^2.0.2"
   }
 }
