--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-concat": "^2.4.3",
     "gulp-jshint": "^1.9.2",
     "gulp-minify-css": "^0.4.4",
+    "gulp-sass": "^1.3.2",
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.0",
