--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "crx-transit",
   "dependencies": {
+    "angular": "^1.3.12",
     "coffee-script": "^1.9.0",
     "gulp": "^3.8.10",
     "gulp-clean": "^0.3.1",
