--- a/src/manifest.json
+++ b/src/manifest.json
@@ -44,5 +44,8 @@
     "http://fanyi.youdao.com/openapi.do",
     "http://openapi.baidu.com/",
     "http://trit.herokuapp.com/api/items"
-  ]
+  ],
+
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+
 }
