--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.12"
+    "angular": "~1.3.12",
+    "angular-elastic": "~2.4.2"
   }
 }
