--- a/site/Gemfile
+++ b/site/Gemfile
@@ -2,6 +2,7 @@
 # the following line to use "http://" instead
 source 'https://rubygems.org'
 
+gem 'bundler', '>= 1.7.0'
 gem "middleman", "~>3.3.7"
 
 # Live-reloading plugin
@@ -12,3 +13,7 @@ gem "wdm", "~> 0.1.0", :platforms => [:mswin, :mingw]
 
 # Windows does not come with time zone data
 gem "tzinfo-data", platforms: [:mswin, :mingw]
+
+source 'https://rails-assets.org' do
+  gem 'rails-assets-bootstrap'
+end
