--- a/site/Gemfile
+++ b/site/Gemfile
@@ -5,8 +5,8 @@ source 'https://rubygems.org'
 gem 'bundler', '>= 1.7.0'
 gem "middleman", "~>3.3.7"
 
-# Live-reloading plugin
 gem "middleman-livereload", "~> 3.1.0"
+gem 'middleman-deploy'
 
 # For faster file watcher updates on Windows:
 gem "wdm", "~> 0.1.0", :platforms => [:mswin, :mingw]
