--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "crx-transit",
-  "dependencies": {
-    "angular": "^1.3.12",
+  "devDependencies": {
+    "browserify": "^10.2.4",
     "coffee-script": "^1.9.0",
+    "coffeeify": "^1.1.0",
     "gulp": "^3.8.10",
+    "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.1",
     "gulp-cleanhtml": "^0.1.0",
     "gulp-coffee": "^2.3.1",
