--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   ],
   "dependencies": {
     "angular": "~1.3.12",
-    "angular-elastic": "~2.4.2"
+    "angular-elastic": "~2.4.2",
+    "underscore": "~1.8.3"
   }
 }
