--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.0",
     "gulp-zip": "^2.0.2"
+  },
+  "dependencies": {
+    "angular": "^1.4.1",
+    "angular-elastic": "^2.3.5",
+    "jquery": "^2.1.4",
+    "underscore": "^1.8.3"
   }
 }
