--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,8 +12,7 @@
 
   "background": {
     "scripts": [
-      "js/application.js",
-      "js/translators.js",
+      "js/lib-all.js",
       "js/event.js"
     ],
     "persistent": true
@@ -31,7 +30,7 @@
       "matches": ["<all_urls>"],
       "css": ["css/contentstyle.css"],
       "js": [
-        "js/application.js",
+        "js/lib-all.js",
         "js/contentscript.js"
       ],
       "all_frames": true
