--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "angular": "^1.4.1",
     "angular-elastic": "^2.3.5",
     "jquery": "^2.1.4",
+    "sugar": "^1.4.1",
+    "sugarjs": "0.0.2",
     "underscore": "^1.8.3"
   }
 }
