--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "dependencies": {
     "angular": "^1.4.1",
     "angular-elastic": "^2.3.5",
+    "browserify": "^10.2.4",
+    "gulp-if": "^1.2.5",
     "jquery": "^2.1.4",
     "sugar": "^1.4.1",
     "sugarjs": "0.0.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
