--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "gulp-cleanhtml": "^0.1.0",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.4.3",
+    "gulp-if": "^1.2.5",
     "gulp-jshint": "^1.9.2",
     "gulp-minify-css": "^0.4.4",
+    "gulp-plumber": "^1.0.1",
     "gulp-sass": "^1.3.2",
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.0",
-    "gulp-zip": "^2.0.2"
+    "gulp-zip": "^2.0.2",
+    "run-sequence": "^1.1.4"
   },
   "dependencies": {
     "angular": "^1.4.1",
     "angular-elastic": "^2.3.5",
-    "browserify": "^10.2.4",
-    "gulp-if": "^1.2.5",
     "jquery": "^2.1.4",
     "sugar": "^1.4.1",
-    "sugarjs": "0.0.2",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0"
   }
