--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gulp-jshint": "^1.9.2",
     "gulp-minify-css": "^0.4.4",
     "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^1.3.2",
+    "gulp-sass": "latest",
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.0",
