show updates notes
listen on chrome extension update event and show extension changes.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -38,6 +38,7 @@
   "permissions": [
     "tabs",
     "storage",
+    "notifications",
     "http://fanyi.youdao.com/openapi.do",
     "http://openapi.baidu.com/",
     "http://trit.herokuapp.com/api/items"
