--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^2.1.4",
     "sugar": "^1.4.1",
     "underscore": "^1.8.3",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "blueimp-md5": "^1.1.1"
   }
 }
