--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
     "browserify": "^10.2.4",
     "coffee-script": "^1.9.0",
     "coffeeify": "^1.1.0",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^5.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.1",
@@ -18,7 +24,7 @@
     "gulp-strip-debug": "^1.0.2",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.0",
-    "gulp-zip": "^2.0.2",
+    "gulp-zip": "latest",
     "run-sequence": "^1.1.4"
   },
   "dependencies": {
