--- a/package.json
+++ b/package.json
@@ -1,32 +1,14 @@
 {
   "name": "crx-transit",
   "devDependencies": {
-    "browserify": "^10.2.4",
-    "coffee-script": "^1.9.0",
-    "coffeeify": "^1.1.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^5.0.0",
+    "grunt-contrib-compress": "^1.1.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "gulp": "^3.8.10",
-    "gulp-browserify": "^0.5.1",
-    "gulp-clean": "^0.3.1",
-    "gulp-cleanhtml": "^0.1.0",
-    "gulp-coffee": "^2.3.1",
-    "gulp-concat": "^2.4.3",
-    "gulp-if": "^1.2.5",
-    "gulp-jshint": "^1.9.2",
-    "gulp-minify-css": "^0.4.4",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sass": "latest",
-    "gulp-strip-debug": "^1.0.2",
-    "gulp-uglify": "^1.1.0",
-    "gulp-watch": "^4.1.0",
-    "gulp-zip": "latest",
-    "run-sequence": "^1.1.4"
+    "grunt-contrib-watch": "^1.0.0"
   },
   "dependencies": {
     "angular": "^1.4.1",
